--- a/ML+paper/ML Dr. Xuantian Lin in youtube.qmd
+++ b/ML+paper/ML Dr. Xuantian Lin in youtube.qmd
@@ -5,7 +5,7 @@ title: "ML"
 # Thanks to Dr. Mu He for recommending @ Machine Learning Foundations (機器學習基石) to me.
 
 ## PLA
-simple, fast, and used to each dimention
+simple, fast, and used to each demension
 
 ### Introduction
 
@@ -131,6 +131,9 @@ refers to a value that depends on the characteristics of the data, particularly 
 
 # Why could machine learn? 
 The Theorem of Generalization ensures it by guaranteeing $E_in$ approximately equal to $E_out$, which could be small. We could explain it from the very beginning which is an interesting and logical process.
+
+
+
 ## simple intro first
 
 
@@ -176,12 +179,9 @@ $$
 ## target f and g
 ## eg of 2D pr
 ## PAL based on concentration ..
-## 
+ 
 
-
-
-
-# $$
+$$
 \forall g = \mathcal{A}(\mathcal{D}) \in \mathcal{H} \text{ and 'statistical' large } \mathcal{D}, \text{ for } N \ge 2, k \ge 3
 $$
 
@@ -198,14 +198,17 @@ $$
 \le
 4 (2N)^{k-1} \exp \left( -\frac{1}{8} \epsilon^2 N \right)
 $$
-This leads us to VC dimension:
 
 
-# How does machine learn? VC dimension( d_vc= min_k -1)
+This leads us to VC dimension(and above is acctually a VC Bound if we replace k-1 with $d_{vc}$:
+
+
+# How does machine learn?----- VC dimension
+( $d_{vc}$= $min_{k-1}$)
 ## connection with the last part
-# Generalization with Finite \( d_{vc} \)
+# Generalization with Finite $d_{vc}$ 
 
-Finite \( d_{vc} \) implies that \( g \) 'will' generalize:
+Finite $d_{vc}$ implies that \( g \) 'will' generalize:
 
 $$
 E_{\text{out}}(g) \approx E_{\text{in}}(g)
@@ -215,4 +218,82 @@ This holds:
 - Regardless of learning algorithm \( \mathcal{A} \)
 - Regardless of input distribution \( P \)
 - Regardless of target function \( f \)
+
+
+
+
+
+
+## VC demension of perceptrons
+
+### proof of $d_{vc}=d+1$
+(d is the number of the demension of the perceptrons):
+method:  $d_{vc}\leq d+1$ and $d_{vc}\geq d+1$
+
+#### firstly, $d_{vc}\geq d+1$
+i.e. there exists some d + 1 inputs we can shatter ( reason: $d_{vc}$= $k_{min}-1$ so k $\geq  $ d+2 )
+
+We use this special data to show the existance(d demensional space sattered by d+1 points(vectors)):
+ $$
+X = \begin{bmatrix}
+1 & 0 & 0 & \cdots & 0 \\
+1 & 1 & 0 & \cdots & 0 \\
+1 & 0 & 1 & \cdots & 0 \\
+\vdots & \vdots & \vdots & \ddots & \vdots \\
+1 & 0 & 0 & \cdots & 1
+\end{bmatrix}
+$$
+(*the demension of the perceptron is not the same as the dimensions of a matrix!---so do not confused about sth wasting a lot of time----focus more on the define then maybe we will be more effective*)
+
+
+col-1: origin
+col-2: 1-d 1 weight
+col-3:2-d 1 weight
+...
+     ----1 data of origin, d datas ---d+1 data 
+
+
+### ps: I just did not understand shatter very well until now: <2^n means the ability of a hypothesis class to perfectly classify every possible combination of labels for a set of points. 
+
+So we come back to the proof: d points shatter d+1 dimensions means for any y in d+1 dimensions, there exists a vector w such that sign(Xw)=y. So if we could prove Xw=y, we could succeed. Since X is invertible, w=$X^{-1}y$
+
+
+
+#### secondly,  $d_{vc}\leq d+1$ 
+
+i.e. We cannot shatter any set of d+2 inputs.
+
+Since we just used d+1 points in the last proof, we only need to add one point now. If we add a vector that is linear dependent with the d+1 points(here we use linear dependence to restrict dichotomy). This offers us some instructions.
+
+
+
+proof: d+2 rows > d+1 columns---linear dependent----x_d+2 could be the linear combination of those d+1 points
+
+ So we will prove :if shatters, For any d+2 points, among the 2^{d+2} situations you want to test, there will be a situation where a_i and w^T w_i have the same sign but  the d+2th  situation  is absolutely impossible happends  at this point.
+  
+  Suppose it could be shatter(proof of contradiction)：
+  
+  
+  (I did not understand it so i will not explain until one day i understand)
+  
+  
+  
+## M and d_vc---degree of freedom
+
+$d_{vc}=d+1:$effective 'binary' degrees of freedom, powerfulness of H.
+
+
+Since $M=2(2N)^{d_{vc}}$ 
+Small M has too few choices so that A may not choose small enough E_in(g); Similarly, small $d_{vc}$ has too limited power.
+Large M (d_vc) may not make sure E_out(g) and E_in(g) close enough;Similarly, large $d_{vc}$, either.
+  
+## VC Bound Rephrase
+a rephrase from  PAC (Probably Approximately Correct) :
+ $$ E_{in}(g) - \sqrt{\frac{8}{N} \ln\left(\frac{4(2N)^{d_{VC}}}{\delta}\right)}\leq E_{out}(g) \leq E_{in}(g) + \sqrt{\frac{8}{N} \ln\left(\frac{4(2N)^{d_{VC}}}{\delta}\right)}$$ where $\delta=4 (2N)^{k-1} \exp \left( -\frac{1}{8} \epsilon^2 N \right)$ and g=A(D)in H and statistical large D with $d{vc}\geq 2$ 
+the square-root is the penalty for model complexity(relevant to:N(how many points) H(what is the VC dimension d_vc) $\delta$(how lucky you think you are?????))
+
+  
+  
+  
+  
 
